--- a/guides/getting-started/your-first-test.mdx
+++ b/guides/getting-started/your-first-test.mdx
@@ -1,197 +1,212 @@
 ---
-title: "Writing and Running Your First Test"
-description: "Step-by-step tutorial on creating your first GoogleTest unit test and running it. Introduces the test macro, basic assertions, and how to execute tests, helping users gain immediate hands-on experience."
+title: "Your First Test"
+description: "Write and run your very first test using GoogleTest. This guide demystifies the basics of test case creation, assertions, and how to interpret results, ensuring even those new to testing can validate their code with ease and confidence."
 ---
 
-# Writing and Running Your First Test
+# Your First Test with GoogleTest
 
-Welcome to your first hands-on experience with GoogleTest! This guide walks you through writing a simple unit test from scratch and running it, introducing essential concepts and commands so you can start verifying your C++ code immediately.
-
----
-
-## 1. What You Will Achieve
-
-- Write a basic unit test function using GoogleTest macros
-- Compile your test with and without CMake
-- Run the test executable and interpret its output
-
-By the end, you'll have a working test case that verifies a simple condition and understand how to extend this foundation for comprehensive testing.
+This guide helps you write and run your very first test using GoogleTest. It demystifies the essentials of defining test cases, using assertions, and interpreting test results. Designed for users new to automated testing, this tutorial will empower you to validate your C++ code with confidence.
 
 ---
 
-## 2. Prerequisites
+## Workflow Overview
 
-Before proceeding, ensure you have the following ready:
-
-- GoogleTest installed and configured in your development environment [see Installation and Setup guide](/guides/getting-started/installation-setup)
-- A C++17-compliant compiler (e.g., GCC 7+, Clang 5+, MSVC 2017+)
-- Basic familiarity with compiling C++ code and running command-line tools
-
-> If you're using CMake or Bazel, confirm you have at least a minimal project setup aligning with [Project Configuration](/getting-started/configuration-and-first-use/project-configuration).
+- **Task Description:** Write, compile, and run a basic test case using the GoogleTest framework.
+- **Prerequisites:**
+  - A C++ development environment with GoogleTest installed and linked.
+  - Basic familiarity with C++ syntax.
+- **Expected Outcome:** A successful GoogleTest program that runs your first test and reports the result.
+- **Time Estimate:** 10-15 minutes.
+- **Difficulty Level:** Beginner.
 
 ---
 
-## 3. Writing Your First Test
+## Step-by-Step Instructions
 
-### Step 1: Create a Test Source File
+### 1. Include the GoogleTest Header
 
-Create a C++ source file named `sample_test.cpp` with the following contents:
-
+Start your test source file by including the main GoogleTest header:
 ```cpp
 #include <gtest/gtest.h>
+```
+This header provides all the necessary macros and functions to write your tests.
 
-// Test case name: "ExampleTest"
-// Test name: "BasicAssertions"
-TEST(ExampleTest, BasicAssertions) {
-  // Expect equality between 1 and 1.
-  EXPECT_EQ(1, 1);
+### 2. Define a Simple Test Case
 
-  // Another assertion to demonstrate failure reporting.
-  EXPECT_NE(1, 2);
+Use the `TEST()` macro to define a test. It takes two arguments:
 
-  // An assertion that will fail (for demonstration only).
-  // Uncomment to test failure report:
-  // EXPECT_EQ(2, 3);
+- The **test suite name** — a container grouping related tests.
+- The **test name** — identifies this specific test.
+
+Both names must be valid C++ identifiers and, per best practice, should _not_ contain underscores to avoid naming conflicts.
+
+Example - testing a factorial function:
+```cpp
+int Factorial(int n);  // Declaration of the function under test
+
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
-**What’s happening here?**
+Each `EXPECT_EQ` assertion checks equality between expected and actual values. If any assertion fails, the entire test fails.
 
-- `TEST(TestCaseName, TestName)` defines a single test.
-- `EXPECT_EQ` and `EXPECT_NE` are assertion macros that verify two values are equal or not equal.
-- When assertions fail, GoogleTest reports them but continues running the test.
+### 3. Write the `main()` Function
 
-### Step 2: Compile the Test Manually
-
-If you prefer a direct compile command (without CMake), run something like:
-
-```bash
-# Replace <path_to_gtest_include> and <path_to_gtest_lib> accordingly
-clang++ -std=c++17 -I<path_to_gtest_include> sample_test.cpp -L<path_to_gtest_lib> -lgtest_main -lgtest -pthread -o sample_test
+Add a main function to initialize and run all tests:
+```cpp
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
-On Windows with MSVC, the command will be adjusted accordingly. Confirm GoogleTest libraries and includes are correctly specified.
+- `InitGoogleTest()` parses command line arguments to configure testing behavior.
+- `RUN_ALL_TESTS()` runs all registered tests and returns `0` if all succeed, or `1` otherwise.
 
-### Step 3: Run the Test Executable
+> **Important:** Always return the result of `RUN_ALL_TESTS()` from your `main()` to ensure the test runner correctly observes success or failure.
 
-Run your test binary:
+### 4. Compile and Link Your Test
 
+Compile your source file with your C++ compiler, linking with GoogleTest and Google's test main libraries (`-lgtest -lgtest_main -pthread` on Unix-like systems).
+
+Example (Unix/macOS):
 ```bash
-./sample_test
+g++ my_test.cc -lgtest -lgtest_main -pthread -o my_test
 ```
 
-Expected output (summary excerpt):
+### 5. Run Your Test Executable
 
-```text
-[==========] Running 1 test from 1 test suite.
+Execute the compiled binary:
+```bash
+./my_test
+```
+
+Sample output on success:
+```
+[==========] Running 2 tests from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 1 test from ExampleTest
-[ RUN      ] ExampleTest.BasicAssertions
-[       OK ] ExampleTest.BasicAssertions (0 ms)
-[----------] 1 test from ExampleTest (0 ms total)
+[----------] 2 tests from FactorialTest
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
+
 [----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
 ```
 
-If you uncomment the failing assertion and rerun, GoogleTest will provide a detailed failure message.
+If any test fails, GoogleTest prints detailed info about the failure including file, line number, expected and actual values.
 
 ---
 
-## 4. Using CMake to Build Your Test
+## Understanding Assertions
 
-You'll often want to integrate GoogleTest into your build system. Here's a minimal example for CMake.
+GoogleTest includes a rich set of assertion macros:
 
-### Step 1: Create `CMakeLists.txt`
+- `EXPECT_*` — report failure but continue the test.
+- `ASSERT_*` — report failure and abort the current test.
 
-```cmake
-cmake_minimum_required(VERSION 3.10)
-project(ExampleTestProject CXX)
+Use `EXPECT_*` assertions when further test evaluation makes sense after a failure, and `ASSERT_*` when subsequent operations depend on the assertion being true.
 
-set(CMAKE_CXX_STANDARD 17)
-
-# Find GoogleTest
-find_package(GTest REQUIRED)
-
-add_executable(sample_test sample_test.cpp)
-target_link_libraries(sample_test GTest::gtest_main GTest::gtest pthread)
-
-include(GoogleTest)
-gtest_discover_tests(sample_test)
+Example:
+```cpp
+TEST(MyTestSuite, Example) {
+  ASSERT_NE(ptr, nullptr) << "Pointer must not be null!";
+  EXPECT_EQ(*ptr, expected_value);
+}
 ```
 
-### Step 2: Build and Run
+Common assertions:
+- `EXPECT_EQ(val1, val2)` checks equality.
+- `EXPECT_TRUE(condition)` checks boolean true.
+- `ASSERT_NE(ptr, nullptr)` checks pointer is not null and aborts test if violated.
 
-```bash
-mkdir build && cd build
-cmake ..
-cmake --build . --config Release
-ctest -V
+For full list, see the [GoogleTest Assertions Reference](docs/reference/assertions.md).
+
+---
+
+## Best Practices
+
+* Avoid using underscores in test suite and test names to prevent naming conflicts.
+* Use `TEST()` for simple tests; switch to `TEST_F()` when you need shared setup via test fixtures.
+* Return the result of `RUN_ALL_TESTS()` in `main()`.
+* Compile and run your tests often to catch failures early.
+* Use descriptive failure messages by streaming custom messages into assertions with `<<`.
+* Use `DISABLED_` prefix to temporarily exclude failing or incomplete tests.
+
+---
+
+## Troubleshooting
+
+**Test not running?**
+- Ensure your test source file is compiled and linked into your test executable.
+- Confirm `main()` calls `RUN_ALL_TESTS()`.
+
+**Compiler errors with `TEST_F()`?**
+- Confirm the fixture class has a public default constructor.
+
+**Test output is empty or cluttered?**
+- GoogleTest writes test results to `stdout`, and log messages usually go to `stderr`. Use redirection to separate outputs if needed.
+
+**Test fails without clear cause?**
+- Review assertion failure messages carefully.
+- Check for proper assertion use (`EXPECT_` vs `ASSERT_`).
+
+**I get linker errors?**
+- Verify GoogleTest libraries are properly linked.
+- On Windows, confirm runtime library compatibility.
+
+For more troubleshooting tips, see the [GoogleTest FAQ](docs/faq.md).
+
+---
+
+## Next Steps & Related Content
+
+- Explore writing tests with common data setups using [Test Fixtures](docs/primer.md#same-data-multiple-tests).
+- Learn how to write parameterized and typed tests in the [Parameterized & Typed Tests Guide](guides/writing-tests/parameterized-tests).
+- Dive into advanced assertions and custom failure messages in [Advanced GoogleTest Topics](docs/advanced.md).
+- Consult [Project Setup & Configuration](getting-started/first-test-experience/project-setup) for integrating GoogleTest into your build.
+
+---
+
+## Summary
+
+You have now written, built, and run your first GoogleTest case. From here, you can leverage GoogleTest's powerful features to write robust, maintainable, and scalable tests for your C++ applications.
+
+---
+
+## Sample Minimal Test Complete Code
+```cpp
+#include <gtest/gtest.h>
+
+int Factorial(int n) {
+  return (n <= 1) ? 1 : n * Factorial(n - 1);
+}
+
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+}
+
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
-The `ctest -V` command runs tests and outputs verbose results equivalent to running the binary directly.
-
----
-
-## 5. Understanding Test Structure
-
-- **Test case:** This is `ExampleTest` - groups related tests logically.
-- **Test:** `BasicAssertions` - a function that holds one or more assertions.
-- **Assertions:** Evaluate conditions; when failing, report errors but do not stop the test unless fatal assertion is used.
-
-This pattern scales naturally as you add more tests and complex validations.
-
----
-
-## 6. Practical Tips & Best Practices
-
-- Start with simple tests to verify basic functionality.
-- Use descriptive test case and test names for clarity.
-- Remember that GoogleTest asserts are non-fatal by default (`EXPECT_*`), so tests continue after a failure.
-- Use `ASSERT_*` macros when the failure should halt the current test immediately.
-- Avoid side-effect statements inside assertions unless necessary.
-- Use the `--gtest_filter` flag to run specific tests by test case or test name.
-- Keep your test dependencies isolated to avoid flaky behaviors.
-
----
-
-## 7. Troubleshooting Common Issues
-
-<AccordionGroup title="Common Issues">  
-<Accordion title="Compilation Errors Related to GoogleTest Headers or Libraries">  
-Ensure you have added the correct include paths and linked the required libraries (`gtest`, `gtest_main`, and on Linux/macOS, `pthread`).  
-For CMake usage, `find_package(GTest REQUIRED)` mitigates this step.  
-</Accordion>  
-<Accordion title="Test Binary Does Not Run or Finds No Tests">  
-Verify the test binary is linked with `gtest_main` or you provide your own `main` function.  
-Ensure you call `::testing::InitGoogleTest(&argc, argv);` in `main` if you write one.  
-</Accordion>  
-<Accordion title="Tests Do Not Fail When Expected">  
-Check that expectation macros (e.g., `EXPECT_EQ`) are correctly used.  
-Verify the code under test actually calls the test assertions.  
-Run the tests with `--gtest_verbose=info` for detailed output.  
-</Accordion>  
-<Accordion title="Unexpected Behavior or Crashes">  
-Make sure all virtual destructors are present in interfaces, especially when mocking.  
-Avoid mocking non-virtual methods unless employing specific strategies detailed elsewhere.  
-</Accordion>  
-</AccordionGroup>
-
----
-
-## 8. Next Steps
-
-- Explore writing more complex test cases with fixtures and parameterized tests in the [Writing and Running Your First Test guide](/getting-started/configuration-and-first-use/writing-first-test).
-- Learn about GoogleMock basics to mock dependencies ([Basic Mocking with GoogleMock](/getting-started/configuration-and-first-use/using-googlemock-basics)).
-- Dive into assertions and test patterns for robust validations ([Assertions and Test Patterns](/guides/core-test-workflows/assertions-best-practices)).
-
----
-
-## 9. Additional Resources
-
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) - Detailed introduction
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) - Easy mock introduction
-- [GoogleTest GitHub Repository](https://github.com/google/googletest) - Source and examples
-- [CMake Installation and Setup Guide](/guides/getting-started/installation-setup)
-
----
+Running this will produce output indicating success or failure of the tests.
